# radar

./: .coderabbit.yml  .env.production  .gitignore  Dockerfile.prod  README.md  README_REFACTORING.md  advanced_charts.py  alert_config.json  analyzer.py  backtesting_engine.py  config.py  cqg_api.py  create_test_data.py  dashboard.html  decodo_api.py  docker-compose.prod.yml  dynamic_wig30_analyzer.py  file_monitor.py  file_monitored_stocks.json  main.py  market_regime.py  ml_trading_system.py  monitor.py  monitored_stocks.json  package-lock.json  package.json  realtime_data.db  realtime_integration.py  requirements.txt  risk_management.py  start_monitoring.py  stooq_integration.py  technical_analysis.py  trading_chart_service.py  trading_signals.py  web_dashboard.py  wig30_bot.py  xtb_integration.py
app/: analyzer.py  config.py  wig30_bot.py
charts/: LPP.WA_20251017_084356.json  charts_summary.json
data/: live_prices.json
gpw-smart-analyzer/: .gitignore  Dockerfile.prod  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
gpw-smart-analyzer/src-tauri/: Cargo.toml  tauri.conf.json
gpw-smart-analyzer/src-tauri/src/: lib.rs  main.rs
ml_models/: models_metadata.json
nginx/: nginx.prod.conf
professional_charts/: KTY.WA_candlestick_20251016_203412.json  KTY.WA_candlestick_20251017_080919.json  KTY.WA_macd_20251017_084356.json  KTY.WA_rsi_20251016_203412.json  KTY.WA_rsi_20251017_074321.json  KTY.WA_rsi_20251017_084356.json  KTY.WA_volume_20251016_203412.json  KTY.WA_volume_20251017_080919.json  (+21 more)
src/: __init__.py
(+77 files in other folders)
